# ors

./: (  .gitignore  CMakeLists.txt  LICENSE  README.md  a.bc  a.out  aa  aa.ll  baslat.py  byval  imla  kk  main  main.ll  main_c.ll
betikler/: deneme.py  derleme.py  (+2 more)
kaynak/ors/: CMakeLists.txt  yerel.h
kaynak/ors/belge/: belge.c  yerel.h
kaynak/ors/bildiri/: bildiri.c  hata.c  uyar.c  yerel.h
kaynak/ors/bildirim/: bildirim.c  hata.c  yerel.h
kaynak/ors/birim/: b_ayıklama.c  birim.c  ozellestirme.c  uzanti.c  yerel.h
kaynak/ors/cozumleme/: baslat.c  cozumleme.c  kutuphane.c  ozellestirme.c  tanim.c  yerel.h
kaynak/ors/cozumleme/ifade/: basit.c  baslatma.c  cagri.c  dizi.c  dizi_erisim.c  hafiza.c  hazne.c  ifade.c  ifade_arama.c  ifade_koku.c  oncelik.c  onifade.c  tekil_ifade.c
kaynak/ors/cozumleme/islem/: islem.c  islem_kesiti.c  tur_islemi.c
kaynak/ors/cozumleme/satir/: dagarcik.c  deger.c  degisken.c  don.c  durum.c  eger.c  git.c  her.c  icerme.c  satir.c  tum.c  yonlendirme_ifadesi.c
kaynak/ors/cozumleme/simge/: bilgi.c  simge.c  yazdir.c  yerel.h
kaynak/ors/cozumleme/tarama/: cizelgeler.c  denetim.c  harf.c  hata.c  imlec.c  noktali_virgul.c  sayi.c  siradaki_harfler.c  siradaki_metin.c  sozcuk.c  tara.c  yerel.h  yorumlar.c
kaynak/ors/cozumleme/tur/: isimlendir.c  kalip.c  ortak.c  sayac.c  tur.c  tur_ifadesi.c  tur_kismi.c  tur_no.c
kaynak/ors/cozumleme/yapilandirma/: tur_ekle.c  yapitaslari_ekle.c
kaynak/ors/denetleme/: denetleme.c  dn_bildiri.c  dn_deger.c  dn_ifade.c  dn_ikiz.c  dn_konum_degeri.c  dn_nesne.c  dn_tekiz.c  dn_tur.c  hata.c  yerel.h
kaynak/ors/derleme/: baslat.c  derleme.c  yapilandirma.c  yerel.h
kaynak/ors/dokum/: birim_dokum.c  derleme_dokum.c  imge_dokum.c  is_bilgi.c  kaynak_dokum.c  kutuphane_dokum.c  nesne_dokum.c  ozellik_dokum.c  sozluk_dokum.c  turler_dokum.c  uretim_oncesi.c  uretim_sonrasi.c  urun_dokum.c  yerel.h
kaynak/ors/harfler/: harfler.c
kaynak/ors/imge/: bilgi.c  imge.c  sozluk.c  tanim.c  temizlik.c  yazdir.c  yerel.h
kaynak/ors/imge/ifade/: arguman.c  basit.c  baslatma.c  durgun_ifade.c  harfler.c  hazne.c  i_arama.c  i_ayiklama.c  i_hafiza.c  i_metin.c  i_sayi.c  ifade.c  ifade_koku.c  kosul_ifadesi.c  onifade.c  sabit_ifade.c  sayi.c  sec.c  tur_alma.c  yerel.h
kaynak/ors/imge/ifade/cagri/: cagri.c  cagri_altyapi.c  cagri_ayiklama.c  cagri_hazirlik.c  sanal.c  tur_cagrisi.c
kaynak/ors/imge/ifade/dizi/: atamali.c  atamasiz.c  dizi.c  konum.c
kaynak/ors/imge/ifade/ikizler/: atama.c  degistir.c  erisim.c  gecir.c  i_gecir.c  karsilastirma.c  mantiksal.c  temel_islem.c
kaynak/ors/imge/ifade/tekizler/: boyut.c  degil.c  i_konum.c  konum.c  tekiz.c
kaynak/ors/imge/ikileme/: islem.c
kaynak/ors/imge/ikileme/ifade/: ifade.c
kaynak/ors/imge/ikileme/satir/: dagarcik.c  dd.c  satir.c
kaynak/ors/imge/ikileme/tur/: kisim.c  ortak.c  tur.c
kaynak/ors/imge/islem/: altyapi_tanimi.c  baglama.c  i_ayıklama.c  islem.c  islem_tanimi.c  kesitler.c  sanal_is.c  tur_isi.c  yerel.h
kaynak/ors/imge/islem/altyapi/: altyapi_tanimi.c  cagri_altyapi.c  öntanımlılar.c
kaynak/ors/imge/kutuphane/: dahili.c  kutuphane.c  yerel.h
kaynak/ors/imge/satir/: birim_degeri.c  dagarcik.c  deger.c  degisken.c  don.c  durum.c  eger.c  git.c  her.c  ileti.c  kesit.c  pascal.c  s_hafiza.c  satir.c  seçim.c  tum.c  yerel.h  yonlendirme.c
kaynak/ors/imge/tur/: derece.c  donatim.c  isimlendirme.c  kalip.c  no.c  ortak.c  sayac.c  sorular.c  t_arama.c  tur.c  tur_ifadesi.c  tur_nesnesi.c  turkismi.c  uye.c  yalin.c  yapitaslari.c  yerel.h
kaynak/ors/imge/tur/ayiklama/: s_ayiklama.c  t_ayiklama.c
kaynak/ors/is/: arayuz.c  bilgi.c  dosyalar.c  gezme.c  is.c  is_emir.c  kaynak.c  kutuphane.c  tanimlama.c  yerel.h
kaynak/ors/is/kaynak/: kaynak.c  kaynak_gez.c  kaynak_hafiza.c  yerel.h
kaynak/ors/kok/: utf.c  yerel.h
kaynak/ors/kok/belge/: belge.c  yerel.h
kaynak/ors/kok/kare/: hafiza.c  kare.c  yerel.h
kaynak/ors/kok/metin/: metin.c  yerel.h
kaynak/ors/kok/sozluk/: sozluk.c  yerel.h
kaynak/ors/konum/: bilgi.c
kaynak/ors/kutuphane/: kutuphane.c  uzanti.c  yerel.h
kaynak/ors/metin/: metin.c  yerel.h
kaynak/ors/nesne/: boyut.c  ceviri.c  gec.c  gecir.c  ikiz.c  karsilastirma.c  konum.c  nesne.c  pi.c  sayi.c  yarat.c  yerel.h  yukle.c
kaynak/ors/simge/: bilgi.c  simge.c  yazdir.c  yerel.h
kaynak/ors/sozluk/: kume.c  yerel.h
kaynak/ors/tarama/: cizelgeler.c  denetim.c  harf.c  hata.c  imlec.c  metin.c  noktali_virgul.c  sayi.c  sozcuk.c  tara.c  tarama.c  yerel.h  yorumlar.c
kaynak/ors/temel/: belge_yolu.c  dosya_koku.c  temel.c  tur_yazdir.c  yerel.h
kaynak/ors/uretim/: baslat.c  gez.c  u_baslat.c  uretim.c  yapilandirma.c  yerel.h  öntanımlılar.c
kaynak/ors/uretim/arama/: arama.c  arama_ifadesi.c  basit.c  deger.c  ifade.c  kutuphane.c  tanimlanan.c  temel.c  tur.c  yerel.h
kaynak/ors/uretim/birim/: birim.c  temizlik.c  yazdir.c
kaynak/ors/uretim/dokum/: derleme.c  dokum.c  is.c  nesne.c  ozellik.c  sozluk.c  turler.c  uretim_oncesi.c  uretim_sonrasi.c  urun.c
kaynak/ors/uretim/el_alti/: sayi.c
kaynak/ors/uretim/llvm/: arguman.c  dahili.c  harici.c  llvm_baslat.c  llvm_codu.c  llvm_hafiza.c  ozellestirme.c  tetik.c  u_dahili.c  urun_nesnesi.c  yapilandir.c  yerel.h
kaynak/ors/uretim/makina/: utf8den_asciiye.c  yerel.h
kaynak/ors/uretim/makina/llvm/: baslat.c  temizlik.c  yapilandir.c  yerel.h
kaynak/ors/uretim/urun/: urun.c  yerel.h
kaynak/ors/urun/: temizlik.c  urun.c
kaynak/uzengi/: CMakeLists.txt  arama.c  giris.c  hafiza.c  imge_bilgi.c  kalip.c  siradaki_hata.c  siradaki_metin.c  siradaki_sayi.c  siradaki_sozcuk.c  siradaki_yorum.c  tara.c  uzengi.c  uzn_arama.c  uzn_dizi.c  uzn_hucre.c  uzn_kalip.c  uzn_ornek.c  uzn_sayac.c  yapilandir.c  yerel.h
kaynak/uzengi/arama/: arama.c
kaynak/uzengi/cozumleme/: baslat.c  degerlendir.c  dizi.c  nesne.c  tanim.c
kaynak/uzengi/dokum/: dokum.c  kalip.c
kaynak/uzengi/okuma/: baslat.c
kaynak/uzengi/tarama/: cizelgeler.c  denetim.c  harf.c  hata.c  imlec.c  metin.c  sayi.c  sozcuk.c  tara.c  tarama.c  yerel.h  yorumlar.c
(+775 files in other folders)
